--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <title>alapok</title> 
  </head>
  <body>
- <img src="pic_trulli.jpg" alt="kutya">
+ <img src="kutya.jfif" alt="kutya">
  
  
  </body>
