--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
  </head>
  <body>
  <img src="kutya.jpg" alt="kutya">
- 
+  <h1>ez egy cuki kutya</h1>
  
  </body>
-  <h1>Ez egy cuki kutya</h1>
+ 
  
  
  </html>
