--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <title>alapok</title> 
  </head>
  <body>
- <img src="kutya.jpg" alt="kutya">
+ <img src="kutya.jpg" alt="kutya"/>
   <h1>ez egy cuki kutya</h1>
  
  </body>
