--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <title>alapok</title> 
  </head>
  <body>
-<img src="download.jpg" alt="Italian Trulli">
+<img src="images.jpg" alt="Italian Trulli">
   <h1>Szia én vagyok</h1>
 
 
